# X-Pace

./: CMakeLists.txt  README.md
include/windows/: MainWindow.h
src/: main.cpp
src/api/: Api.cpp  Api.h  ApiMessage.h
src/components/: Button.cpp  Button.h  ClickableLabel.cpp  ClickableLabel.h  DropdownButton.cpp  DropdownButton.h  ErrorLabel.cpp  ErrorLabel.h  ItemWidget.cpp  ItemWidget.h  LoadingIndicator.cpp  LoadingIndicator.h  MessageBoxManager.cpp  MessageBoxManager.h  PasswordBox.cpp  PasswordBox.h  Permission.cpp  Permission.h  TeamListItemButtons.cpp  TeamListItemButtons.h  Title.cpp  Title.h  TreeWidgetButtons.cpp  TreeWidgetButtons.h
src/pages/: AddTeamPage.cpp  AddTeamPage.h  ApplicationPage.cpp  ApplicationPage.h  EditPage.cpp  EditPage.h  JoinTeamPage.cpp  JoinTeamPage.h  LoginPage.cpp  LoginPage.h  ManagePermissionsPage.cpp  ManagePermissionsPage.h  ManageTeamPage.cpp  ManageTeamPage.h  MyTeamsPage.cpp  MyTeamsPage.h  PageReaderPage.cpp  PageReaderPage.h  RegisterPage.cpp  RegisterPage.h  ViewPage.cpp  ViewPage.h
src/structures/: ItemsList.cpp  ItemsList.h  LoginForm.cpp  LoginForm.h  PermissionsListItem.cpp  PermissionsListItem.h  RegisterForm.cpp  RegisterForm.h  TeamListItem.cpp  TeamListItem.h  TitleBar.cpp  TitleBar.h  TopBar.cpp  TopBar.h
src/utilities/: QNetworkAccessManagerWithDelete.h  QNetworkAccessManagerWithPatch.h  Singleton.h  StringManager.h  StylesLoader.cpp  StylesLoader.h  common.cpp  common.h
src/windows/: MainWindow.cpp  MainWindow.h
styles/: main.css
